# mono-repository-clis

./: README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
tests/forecasts/: test_cli.py
