[project]
name = "external-fetches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "forecasts",
    "virtual_stations",
    "typer>=0.15.2",
    "click>=8.1.8",
]

[tool.uv.sources]
forecasts = { workspace = true }
virtual-stations = { workspace = true }

[tool.uv.workspace]
members = ["packages/forecasts", "packages/virtual-stations"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov packages -ra"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = ["packages/*/src/*/__init__.py", "packages/*/tests/*"]
